--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "theme_color": "#2c3e50",
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "icons/250866D9-404F-425B-BA57-CB60AB6BD48E.png",
       "sizes": "192x192",
       "type": "image/png"
     }
